# PPDOneLeftGame-RMI

./: .gitignore  ApplicationMain.cpp  ApplicationMain.h  CMakeLists.txt  README.md  main.cpp
Game/: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameStateMachine.cpp  GameStateMachine.h  OneLeftClient.cpp  OneLeftClient.h  OneLeftServer.cpp  OneLeftServer.h  config.h
Game/Messages/: Command.cpp  Command.h
Game/Utils/: GameUtils.cpp  GameUtils.h
network/: CMakeLists.txt  OneLeftServer.cpp  client.cpp  client.h  server.cpp  server.h  socket_utils.cpp
network/internal_rpc/: types.h
resources/: ConnectionSetup.puml  GameSequience.puml  GameStateMachine.puml  P2PBasedClassDiagram.puml  RMI-GameRunner.puml  RMI-Sequence.puml  ServerBasedClassDiagram.puml
tests/: client01.py  client02.py
ui/: Board.h  CMakeLists.txt  Cell.cpp  Cell.h  QTBoard.cpp  QTBoard.h  QTCell.cpp  QTCell.h  QTChat.cpp  QTChat.h
